# mymoney

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/: shell.py
apps/examples/: get_recent.py
mymoney/: __init__.py  account.py  bank.py  bpi.py  cgd.py  cxdo_auth.py  fileexport.py  millenniumbcp.py  montepio.py  myedenred.py  santander.py  teste_montepio.py  ticket.py  transaction.py
src/mymoney/: __init__.py  account.py  bpi.py  euroticketREST.py  millenniumbcp.py  transaction.py
