[project]
name = "mymoney"
version = "1.0.0"

description = "Web scrapper for homebanking applications"
readme = "README"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests",
  "python-dateutil",
  "bs4"
]


[project.urls]
"Homepage" = "https://github.com/ruicovelo/mymoney"
"Bug Tracker" = "https://github.com/ruicovelo/mymoney/issues"


[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
